# backend/src/models/customerInfo.js
@@ -1,8 +1,8 @@
 const mongoose = require('mongoose');
 
 const customerSchema = mongoose.Schema({
-    name: String,
-    medicineArray: [Object]
+    googleID: String,
+    medicineArray: [Object],
 });
 
 const CustomerInfo = mongoose.model('CustomerInfo', customerSchema);
