# backend/src/routes/customerRoutes.js
@@ -3,6 +3,7 @@ const router = express.Router();
 
 const customer = require('../controllers/customer.js');
 
-router.post('/', customer.createCustomer);
+router.get('/:googleID', customer.getCustomer);
+router.post('/:googleID', customer.createCustomer);
 
 module.exports = router;
